# MOB

./: .gitignore  README.adoc
src/mob/: CMakeLists.txt  mob_launch.launch  mob_urdf.urdf  package.xml  urdf.rviz
src/mob/launch/: mob_gazebo.launch  mob_gazebo_backup.launch  mob_rviz.launch
src/mob/mob_software/: PIDController.py  PIDController_old.py  grapple.py  gyroscope.py  listner.py  main_driver.py  mess.py  mess2.py  mess3.py  mess4.py  mess5.py  mess6.py  mess7.py  mess8.py  mess9.py  messcopy.py  mob.py  mob2.py  mob3.py  mob4.py  mob5.py  mob_2.0.1.py  mob_2.0.2.py  mob_2.0.py  mob_config.py  motor_encoder.py  pd_test.py  pd_test2.py  pid.py  sonar.py  walk.py  walk_0.py
src/mob/mob_vision/: prototype.py  webcamsvr.py
src/mob/mob_vision/templates/: index.html
src/mob/python_scripts/: gyroscope.py  python_frame.py
src/mob/share/: 01-network-manager-all.yaml  101-usb-serial.rules  MOTOR_TOOL.py  MOTOR_TOOL_ANGLE.py  MOTOR_TOOL_MICRO.py  bluetooth.py  cam.py  camera_script.py  delacruz_translate_c.py  gyroscope.py  gyroscope_test.py  motor_init.py  motor_test.py  requirements.txt  serialTest.py  sonar.py
src/mob/share/templates/: index.html
src/mob/share/test_servo_controller/: big_feet_init_pos.py  connection_scanner.py  fullsend.py  (+12 more)
src/mob/urdf/: HeadMotor.dae  LeftShin.dae  RightShoulder.dae  RightThigh.dae  Shin.dae  Thigh.dae  materials.xacro  mesh_integration.urdf  mob.gazebo  mob.sdf  mob_basic_complete.urdf  mob_body.urdf  mob_experimental_build.urdf  mob_robot.urdf  mob_robot_backup.urdf  robot.gazebo  robot.xacro  robot_backup.xacro
(+4 files in other folders)
