<?xml version="1.0"?>
<package format="2">
  <name>mob</name>
  <version>0.1.0</version>
  <description>
    The mob package contains urdf file for a 17DOF robot.
  </description>

  <author>senior_project</author>
  <maintainer email="janoskij6715@uhcl.edu">senior_project</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend> 
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
